<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/screen_title_background_top" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/screenbackground"
        android:padding="10dp"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_invested_amount"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ea_tv_invested_amt"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeroamt"
                    android:background="@color/earnings_amt"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_lastmn_earnings"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ea_tv_lstmnt_earnings"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeroamt"
                    android:background="@color/earnings_amt"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_lastyr_earnings"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ea_tv_lstyr_earnings"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeroamt"
                    android:background="@color/earnings_amt"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_est_earnings"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ea_tv_est_earnings"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeroamt"
                    android:background="@color/earnings_amt"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>